# perf-challenge

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  generate_vs_project.bat  generate_xcode_project.sh
perf-challenge-app/: CMakeLists.txt  Participants.cmake
perf-challenge-app/data/: sample_file_001.txt  sample_file_002.txt  sample_file_003.txt  sample_file_004.txt  sample_file_005.txt  sample_file_006.txt  sample_file_007.txt  sample_file_008.txt  sample_file_01.txt  sample_file_02.txt
perf-challenge-app/src/: DataGenerator.h  DataProvider.h  ResultPrinter.h  ResultStorage.h  SampleDataProvider.h  TestData.h  TestData_Sample_01.h  TestRunner.h  TimeUnit.h  Timer.h  main.cpp
perf-challenge-app/src/participants/: Participants.h
perf-challenge-app/src/participants/johan_ronnkvist/: Implementation.cpp  Implementation.h
perf-challenge-app/src/participants/reference_user/: Implementation.cpp  Implementation.h
perf-challenge-app/src/participants/sample_user/: Implementation.cpp  Implementation.h
perf-challenge-app/src/precompiled/: stdafx.h
perf-challenge-lib/: CMakeLists.txt
perf-challenge-lib/src/: ISolver.h  ITestDataProvider.h  Registry.h  TestData.h  TimedSolver.h
scripts/cmake/: cotire.cmake
